Calculate GETISPACE/GETOSPACE properly. Bump version.

Addresses PR kern/51999.